css/summary_mobile.css
@keyframes greet {

    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
        display: none;
    }

}


@media(max-width: 1450px) {

    .greet-container {
        position: absolute;
        top: 0;
        right: 0;
        left: 0;
        width: 100%;
        height: 100vh;
        background-color: var(--primary-light-grey);
        z-index: 999;
        animation: greet 3s ease-in forwards;
    }
}

@media(max-width: 1070px) {
    html {
        font-size: 0.425em;
    }
}

@media(max-width: 730px) {

    html {
        font-size: 0.425em;
    }

    .summary-content {
        padding-left: 0rem !important;
        margin-left: 0rem !important;
        width: 100% !important;
        padding-left: 2.8rem !important;
    }

    .summary-header-container {
        flex-direction: column !important;
        align-items: self-start !important;
        width: 0 !important;
        margin-top: 5rem!important;
        height: 18.3rem!important;
    }

    .summary-header-vert-line-mobile {
        background-color: var(--hover-blue);
        height: 3px;
        width: 11.9rem;
        border-radius: 15px;
        margin-top: 2rem;
    }

    .summary-header-vert-line{
        display: none;
    }

    .summary-main-container{
        margin-top: 2.6rem!important;
        width: 100%!important;
    }

   
}

@media(max-width: 390px){
    html{
        font-size: 0.375em;
    }
}

